# certmgr

./: README.md  main.py  pyproject.toml
conf/: csr.cnf.template  intermediate.cnf.template  rootca.cnf.template
src/python/: api_server.py  certmgr.py  requirements.txt
src/scripts/: init_structure.sh  setup.sh  utilities.sh
src/tests/: test_api.py  test_certmgr.py
