[project]
name = "certmgr"
version = "0.1.0"
description = "Local Certificate Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "pydantic==2.5.3",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.27.0",
]
